fix: projects section background alignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,10 +28,3 @@ body {
   width: 0;
   box-shadow: 0 0 128px 100px slategray;
 }
-
-html {
-  height: 100%;
-}
-body {
-  min-height: 100%;
-}
